Added Wiki support to the Ticket system
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket.template
+++ b/templates/ticket.template
@@ -59,15 +59,23 @@
 <td colspan="3"><br><input type="submit" value="commit">
 </tr>
 <tr>
-<td align="right" valign="top">description:</td>
-	<td colspan="3"><hr>
-	<pre>%(description)s</pre>
+<td></td>
+<td colspan="3"><br>description:</td>
+</tr>
+<tr>
+<td></td>
+	<td class="ticket-description" colspan="3">
+	%(description)s
 	</td>
 </tr>
 <tr>
-<td align="right" valign="top">comments:</td>
-	<td colspan="3">
-	<pre>%(changes)s</pre>
+<td></td>
+<td colspan="3"><br>comments:</td>
+</tr>
+<tr>
+<td align="right" valign="top"></td>
+	<td class="ticket-comments" colspan="3">
+	%(changes)s
 	</td>
 </tr>
 </table>
