Added an icon column to the file browser
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@17 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/browser.template
+++ b/templates/browser.template
@@ -11,7 +11,7 @@ Change revision: <input type="text" name="rev" value="%(revision)d" size="6">
 <br>
 
 <table class="listing" cellspacing="0" cellpadding="0">
-<tr class="listing-header"><th class="listing">name</th><th class="listing">size</th><th class="listing">rev</th><th class="listing">date</th></tr>
+<tr class="listing-header"><th class="listing">&nbsp;</th><th class="listing">name</th><th class="listing">size</th><th class="listing">rev</th><th class="listing">date</th></tr>
 %(dir_entries)s
 </table>
 
