Added support for a mod_rewrite href scheme
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@19 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/browser.template
+++ b/templates/browser.template
@@ -2,7 +2,7 @@
 
 <h3>Revision %(revision)d: %(path_links)s</h3>
 
-<form action="" method="get">
+<form action="%(cgi_name)s" method="get">
 <input type="hidden" name="mode" value="browser">
 <input type="hidden" name="path" value="%(path)s">
 Change revision: <input type="text" name="rev" value="%(revision)d" size="6">
