Import a default set of pages when creating new databases.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@154 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include scripts/trac-admin
 recursive-include htdocs *
 recursive-include doc *
+recursive-include wiki-default *
 recursive-include templates *.cs README
 prune *~
 prune *.tmp
