One step closer to a release...
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@173 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,12 +3,13 @@ recursive-include htdocs *
 recursive-include doc *
 recursive-include wiki-default *
 recursive-include templates *.cs README
-prune *~
-prune *.tmp
-prune *.bak
-prune *.old
+prune doc/trac-guide
 prune .svn 
 prune */.svn
 prune */*/.svn
 prune */*/*/.svn
 prune */*/*/*/.svn
+global-exclude *~
+global-exclude *.tmp
+global-exclude *.bak
+global-exclude *.old
