Fixed two bugs found by jburley.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@185 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include scripts/trac-admin
+recursive-include cgi-bin *
 recursive-include htdocs *
 recursive-include doc *
 recursive-include wiki-default *
