No more ugly tabs.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@186 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ recursive-include cgi-bin *
 recursive-include htdocs *
 recursive-include doc *
 recursive-include wiki-default *
-recursive-include templates *.cs README
+recursive-include templates *.cs README RELEASE
 prune doc/trac-guide
 prune .svn 
 prune */.svn
