Cleaned up files and added various odds and ends for a 0.5.1 release.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@191 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,16 +1,15 @@
+include RELEASE COPYING AUTHORS INSTALL
 include scripts/trac-admin
-recursive-include cgi-bin *
-recursive-include htdocs *
-recursive-include doc *
+include cgi-bin/trac.cgi
+recursive-include htdocs *.png *.gif *.js README
+recursive-include doc trac_logo.* README
 recursive-include wiki-default *
-recursive-include templates *.cs README RELEASE
-prune doc/trac-guide
-prune .svn 
-prune */.svn
-prune */*/.svn
-prune */*/*/.svn
-prune */*/*/*/.svn
+recursive-include templates *.cs README
 global-exclude *~
 global-exclude *.tmp
 global-exclude *.bak
 global-exclude *.old
+global-exclude .svn
+global-exclude .svn/*
+global-exclude .svn/*/*
+global-exclude .svn/*/*/*
