Forgot to add ChangeLog.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@192 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include RELEASE COPYING AUTHORS INSTALL
+include RELEASE COPYING AUTHORS INSTALL ChangeLog
 include scripts/trac-admin
 include cgi-bin/trac.cgi
 recursive-include htdocs *.png *.gif *.js README
