--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include RELEASE COPYING AUTHORS INSTALL ChangeLog THANKS UPGRADE
 include scripts/trac-admin
 include cgi-bin/trac.cgi
 recursive-include htdocs *.png *.gif *.js README
+recursive-include htdocs/css *.css
 recursive-include doc trac_logo.* README
 recursive-include wiki-default *
 recursive-include templates *.cs README
