Added a subversion post-commit script contributed by Stephen Hansen. This script can be used to close Trac-tickets simply by including special commands in the commit log.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@294 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ recursive-include htdocs/css *.css
 recursive-include doc trac_logo.* README
 recursive-include wiki-default *
 recursive-include templates *.cs README
+recursive-include contrib/*
 global-exclude *~
 global-exclude *.tmp
 global-exclude *.bak
