* Removed python-xml dependency (rocky). #198  * Added setup.cfg (rocky). #163  * Fixed a typo and added some files to MANIFEST.in.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@329 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS ChangeLog COPYING INSTALL MANIFEST RELEASE THANKS UPGRADE 
+include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in RELEASE setup.cfg THANKS UPGRADE
 include scripts/trac-admin
 include cgi-bin/trac.cgi
 recursive-include htdocs *.png *.gif *.js README
