--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in RELEASE setup.cfg THANKS UPGRADE
 include scripts/trac-admin
+include scripts/tracd
 include cgi-bin/trac.cgi
 recursive-include htdocs *.png *.gif *.js README
 recursive-include htdocs/css *.css
