Made a custom bdist_wininst with good default values. Added installer banner for installer. Fixes #165.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@364 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [bdist_rpm]
+packager = Edgewall Software <info@edgewall.com>
 requires = python >= 2.1
            subversion-python >= 1.0.0
            pysqlite >= 0.4.3
