* Renamed permission.user to permission.username to avoid keyword problem with postgresql.  * Added tracdb2env to MANIFEST.in  * Added sqlite 2.8.13 bug workaround to Wiki.py.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@382 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in RELEASE setup.cfg THANKS UPGRADE
 include scripts/trac-admin
 include scripts/tracd
+include scripts/tracdb2env
 include cgi-bin/trac.cgi
 recursive-include htdocs *.png *.gif *.js README
 recursive-include htdocs/css *.css
