* Display the year as well in the browser and log module. Closes #327.  * Escape the author-value in the log and changeset module.  * Fixed a bogus comment in timeline_rss.cs  * Specify revision when linking to the Log module from the File module.  * Add unit tests to MANIFEST.in.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@478 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,8 @@ include scripts/trac-admin
 include scripts/tracd
 include scripts/tracdb2env
 include cgi-bin/trac.cgi
+include trac/tests/*.py
+include trac/tests/wiki-tests.txt
 recursive-include htdocs *.png *.gif *.js *README
 recursive-include htdocs/css *.css
 recursive-include doc *trac_logo.* *README
