Added READMEs to manifest
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@493 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in RELEASE setup.cfg THANKS UPGRADE
+include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in README README.tracd RELEASE setup.cfg THANKS UPGRADE
 include scripts/trac-admin
 include scripts/tracd
 include scripts/tracdb2env
