Added trac.fcgi to MANIFEST.in
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2178 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include scripts/trac-postinstall.py
 include scripts/*.1
 include scripts/rpm-install.sh
 include cgi-bin/trac.cgi
+include cgi-bin/trac.fcgi
 include trac/tests/*.py
 include trac/tests/wiki-tests.txt
 recursive-include htdocs *.png *.gif *.ico *.js *README
