Added some missing unit-test files to MANIFEST.in
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2188 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,14 @@ include scripts/rpm-install.sh
 include cgi-bin/trac.cgi
 include cgi-bin/trac.fcgi
 include trac/tests/*.py
-include trac/tests/wiki-tests.txt
+include trac/web/tests/*.py
+include trac/wiki/tests/*.py
+include trac/wiki/tests/wiki-tests.txt
+include trac/ticket/tests/*.py
+include trac/scripts/tests/*.py
+include trac/scripts/tests/admin-tests.txt
+include trac/versioncontrol/tests/*.py
+include trac/versioncontrol/tests/svnrepos.dump
 recursive-include htdocs *.png *.gif *.ico *.js *README
 recursive-include htdocs/css *.css
 recursive-include htdocs/js *.js
