WorkFlow: fixups for enterprise-review-workflow.ini
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5502 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/sample-plugins/workflow/enterprise-review-workflow.ini
+++ b/sample-plugins/workflow/enterprise-review-workflow.ini
@@ -1,7 +1,7 @@
 ; enterprise-review-workflow.ini
 ; Add CodeReviewActionController to the workflow option in [ticket].  If there
 ; is no workflow option, the line will look like this:
-; workflow = DefaultTicketActionController,CodeReviewActionController
+; workflow = ConfigurableTicketWorkflow,CodeReviewActionController
 
 
 [ticket-workflow]
@@ -73,7 +73,7 @@ request_review = in_work -> in_review
 request_review.name = request review
 
 review = in_review -> *
-review.operations = code_review
+review.operations = code_review,hidden
 ; A reviewer can approve the work as-is, approve the work with a few things
 ; that need touched-up, but that won't need further review, or request changes
 ; significant enough that another review will be needed.
