WorkFlow: Allow an accepted ticket to be accepted by another user.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5657 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/contrib/workflow/basic-workflow.ini
+++ b/contrib/workflow/basic-workflow.ini
@@ -6,7 +6,7 @@ leave = * -> *
 leave.operations = leave_status
 leave.default = 1
 
-accept = new,assigned,reopened -> accepted
+accept = new,assigned,accepted,reopened -> accepted
 accept.permissions = TICKET_MODIFY
 accept.operations = set_owner_to_self
 
