Hint to the migrate_original_to_basic.py script added to the basic-workflow.ini file. Related to #5727.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5853 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/workflows/basic-workflow.ini
+++ b/trac/ticket/workflows/basic-workflow.ini
@@ -1,6 +1,15 @@
 [ticket-workflow]
 ; basic-workflow.ini
+;
 ; This workflow is intended to be a "fixed" version of the original workflow.
+;
+; If you adopt it for an existing Trac environment, don't forget to convert
+; the status of your existing tickets.
+;
+; Both the setup of the new [ticket-workflow] and the migration can be achieved
+; by using the following script:
+;
+; contrib/workflow/migrate_original_to_basic.py
 
 leave = * -> *
 leave.operations = leave_status
