The default setup for the milestone group stat providers can accomodate any number of states by having a ''closed'' group grouping the closed tickets and another group for all the others. This fixes #5572.
In addition, it is also now quite easy to customize the groups via the trac.ini file. For example:
{{{
[milestone-groups]
closed = closed
closed.order = 0
closed.query_args = group=resolution
closed.overall_completion = true

active = *
active.order = 1
active.css_class = open

new = new,reopened
new.order = 2
}}}


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6011 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/workflows/basic-workflow.ini
+++ b/trac/ticket/workflows/basic-workflow.ini
@@ -30,3 +30,16 @@ reassign.operations = set_owner
 reopen = closed -> reopened
 reopen.permissions = TICKET_CREATE
 reopen.operations = del_resolution
+
+[milestone-groups]
+closed = closed
+closed.order = 0
+closed.query_args = group=resolution
+closed.overall_completion = true
+
+active = *
+active.order = 1
+active.css_class = open
+
+new = new,reopened
+new.order = 2
