--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ add_comments = TRANSLATOR:
 copyright_holder = Edgewall Software
 msgid_bugs_address = trac-dev@googlegroups.com
 output_file = trac/locale/messages.pot
-keywords = _ ngettext N_ tag_
+keywords = _ ngettext:1,2 N_ tag_
 
 [init_catalog]
 input_file = trac/locale/messages.pot
